[project]
name = "pocket-creatures"
version = "1.0.4"
description = "A terminal-based virtual pet game with ASCII art, stats, and random events."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Robin" }
]

dependencies = []

[project.urls]
Homepage = "https://github.com/CaptainDreadbeard/pocket-creatures"
Repository = "https://github.com/CaptainDreadbeard/pocket-creatures"
Issues = "https://github.com/CaptainDreadbeard/pocket-creatures"

[project.scripts]
pocket-creatures = "pocket_creatures.main:main"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
